# Drone_uc

./: .gitignore  CMakeLists.txt  STM32F401RETx_FLASH.ld  debug.cfg  stlink-v2-1.cfg
HARDWARE/inc/: HMC5883L.h  MPU.h  Moter.h  MyI2C.h  Receiver.h  Serial.h
HARDWARE/src/: HMC5883L.c  MPU.c  Moter.c  MyI2C.c  Receiver.c  Serial.c
SystemView/: SEGGER_SYSVIEW_Config_uCOSII.c
USER/inc/: delay.h  main.h  stm32f4xx_it.h  system_stm32f4xx.h
USER/src/: delay.c  main.c  stm32f4xx_it.c  system_stm32f4xx.c
os/inc/: os_cfg.h  os_cpu.h
os/src/: os_cpu_c.c  os_time.c
